Fixed image elements alignment

--- a/styles1.1/modules/dita/figure_image.css
+++ b/styles1.1/modules/dita/figure_image.css
@@ -42,3 +42,24 @@ img {
   -moz-box-shadow: none;
   box-shadow: none;
 }
+
+/* Position images and figure titles horizontally. */
+.imageleft,
+.fig:has(.imageleft) * {
+    text-align: left;
+}
+.imageright,
+.fig:has(.imageright) * {
+    text-align: right;
+}
+.imagecenter,
+.fig:has(.imagecenter) * {
+    text-align: center;
+}
+
+/* Remove additional spacing before and after image elements with the @placement="break" attribute assigned. */
+br {
+    display: block;
+    margin: 0;
+    padding: 0;
+}
